[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Textures/Strips/BazR2.png" type="Texture" id=2]
[ext_resource path="res://Textures/Strips/spr_foxStillR.png" type="Texture" id=3]
[ext_resource path="res://Textures/Strips/BazR1.png" type="Texture" id=4]
[ext_resource path="res://Textures/Strips/BazR3.png" type="Texture" id=5]
[ext_resource path="res://Textures/Strips/BazR4.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Sprite.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Objects/Effects/Particles2D.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Objects/Effects/Blood.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Objects/Characters/Sounds.vs" type="Script" id=10]
[ext_resource path="res://Audio/FX/snd_foxJump.wav" type="AudioStream" id=11]
[ext_resource path="res://Audio/FX/snd_belch.wav" type="AudioStream" id=12]
[ext_resource path="res://Audio/FX/snd_munch.wav" type="AudioStream" id=13]
[ext_resource path="res://Audio/FX/snd_foxHurt1.wav" type="AudioStream" id=14]
[ext_resource path="res://Audio/FX/snd_boom-01.wav" type="AudioStream" id=15]
[ext_resource path="res://Audio/FX/snd_boom-02.wav" type="AudioStream" id=16]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Still",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "Running",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 23.7311, 12.894 )
_sections_unfolded = [ "Resource" ]

[sub_resource type="Animation" id=3]

resource_name = "CamShake"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -35.6821, -21.6814 ), Vector2( 34.0234, 20.0229 ), Vector2( 37.4008, -32.2143 ), Vector2( -42.0183, -1.56787 ), Vector2( 0, 0 ) ]
}

[sub_resource type="AudioStreamRandomPitch" id=4]

audio_stream = ExtResource( 11 )
random_pitch = 1.3

[sub_resource type="AudioStreamRandomPitch" id=5]

audio_stream = ExtResource( 12 )
random_pitch = 1.2

[sub_resource type="AudioStreamRandomPitch" id=6]

audio_stream = ExtResource( 13 )
random_pitch = 1.2

[sub_resource type="AudioStreamRandomPitch" id=7]

audio_stream = ExtResource( 14 )
random_pitch = 1.2

[sub_resource type="AudioStreamRandomPitch" id=8]

audio_stream = ExtResource( 15 )
random_pitch = 1.1

[sub_resource type="AudioStreamRandomPitch" id=9]

audio_stream = ExtResource( 16 )
random_pitch = 1.1

[node name="Fox" type="KinematicBody2D"]

position = Vector2( 256, 0 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]

position = Vector2( 0, -4 )
frames = SubResource( 1 )
animation = "Still"
script = ExtResource( 7 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( -0.4868, -1.35598 )
shape = SubResource( 2 )

[node name="Poof" parent="." index="2" instance=ExtResource( 8 )]

position = Vector2( 12.9865, -6.08485 )
emitting = false
amount = 218
lifetime = 2.67
speed_scale = 2.0
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform" ]

[node name="CamLock" type="Node2D" parent="." index="3"]

[node name="Animations" type="AnimationPlayer" parent="CamLock" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 0
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/CamShake = SubResource( 3 )
blend_times = [  ]
_sections_unfolded = [ "Pause", "Playback Options" ]

[node name="Camera2D" type="Camera2D" parent="CamLock" index="1"]

position = Vector2( -35.6821, -21.6814 )
scale = Vector2( 2, 2 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.65, 0.65 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 12.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = true
_sections_unfolded = [ "Drag Margin", "Editor", "Smoothing", "Transform" ]

[node name="CastR" type="RayCast2D" parent="." index="4"]

position = Vector2( 30, -10 )
enabled = true
exclude_parent = true
cast_to = Vector2( 50, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="CastL" type="RayCast2D" parent="." index="5"]

position = Vector2( -31, -10 )
enabled = true
exclude_parent = true
cast_to = Vector2( -50, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="CastD" type="RayCast2D" parent="." index="6"]

position = Vector2( 0, 12 )
enabled = false
exclude_parent = true
cast_to = Vector2( 0, 4 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="JumpTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 0.25
one_shot = true
autostart = false

[node name="DashTimer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 0.3
one_shot = true
autostart = false

[node name="Particles2D" parent="." index="9" instance=ExtResource( 9 )]

position = Vector2( 4.73337, 1.73557 )
scale = Vector2( 0.7, 0.7 )
amount = 152
lifetime = 0.68
explosiveness = 0.1
randomness = 1.0
local_coords = false
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform" ]

[node name="Sounds" type="Node2D" parent="." index="10"]

script = ExtResource( 10 )
_sections_unfolded = [ "Transform" ]

[node name="Jump" type="AudioStreamPlayer2D" parent="Sounds" index="0"]

stream = SubResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "FoxJump"
area_mask = 1

[node name="Belch" type="AudioStreamPlayer2D" parent="Sounds" index="1"]

stream = SubResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Belch"
area_mask = 1

[node name="Munch" type="AudioStreamPlayer2D" parent="Sounds" index="2"]

stream = SubResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Munch"
area_mask = 1

[node name="Hurt1" type="AudioStreamPlayer2D" parent="Sounds" index="3"]

stream = SubResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Foxhurt"
area_mask = 1

[node name="Boom1" type="AudioStreamPlayer2D" parent="Sounds" index="4"]

stream = SubResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Boom"
area_mask = 1

[node name="Boom2" type="AudioStreamPlayer2D" parent="Sounds" index="5"]

stream = SubResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Boom"
area_mask = 1

[node name="BurpTimer" type="Timer" parent="Sounds" index="6"]

process_mode = 1
wait_time = 0.6
one_shot = true
autostart = false

[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]

[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]

[connection signal="timeout" from="Sounds/BurpTimer" to="Sounds" method="play_burp"]


